2008-04-03  Ingmar Schlecht  <ingmar@typo3.org>

	* Fixed bug #4575: Changes in alternative page language does not clear cache

2008-04-03  Ingo Renner  <ingo@typo3.org>

	* Fixed bug #7496: exclude for header_position, header_link

2008-04-02  Ingo Renner  <ingo@typo3.org>

	* Added follow up patch for bug #6710: Use optgroups in selectorboxes

2008-04-02  Benjamin Mack <benni@typo3.org>

	* Fixed bug #7961: headListTags in class.t3lib_parsehtml_proc.php are hardcoded (Thanks to Steffen Kamper)

2008-04-01  Ingo Renner  <ingo@typo3.org>

	* Release of TYPO3 4.2.0RC1

2008-04-01  Ingmar Schlecht  <ingmar@typo3.org>

	* Fixed bug #7975: Unskinnable icons because of hardcoded html (Thanks to Steffen Kamper)
	* Feature #7985: Beautify table for BE Log (Thanks to Steffen Kamper)

2008-04-01  Michael Stucki  <michael@typo3.org>

	* Fixed bug #7841: Remove COLLATE statement when creating new tables with the Install Tool
	* Fixed bug #7981: Replace ugly labels in BE Log module
	* Fixed bug #1585: Use t3lib_div::sysLog() whenever errors occur in tslib_fe. Additionally, add a new value "request_uri" to the "config.stat_apache_pagenames" property which allows logging of the REQUEST_URI server value (useful with RearUrl environments). Thanks to Steffen Kamper for taking care of these issues.
	* Fixed bug #7743: Install Tool: Create "admin" user did not work in 4.2-beta3
	* Fixed bug #7980: Indexed Search: Fix wrong TypoScript code in plugin template

2008-04-01  Ingo Renner  <ingo@typo3.org>

	* Fixed bug #5998: Crawler/Index Config: hidden records are re-indexed, credits Christian Kuhn
	* Fixed bug #7831: List in Page module has wrong colors, credits Steffen Kamper
	* Changed private declarations to protected

2008-04-01  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #7943: Filelist has nested HTML (thanks to Steffen Kamper)
	* Fixed bug #7820: Task center iframes are only sized on load (thanks to Steffen Kamper)

2008-04-01  Benjamin Mack  <benni@typo3.org>
